<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_detalle_evento"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app">

    <ImageButton
        android:id="@+id/btn_volver_detalle_evento"
        android:layout_width="@dimen/icon_size_40"
        android:layout_height="@dimen/icon_size_40"
        android:layout_marginStart="@dimen/spacing_20"
        android:layout_marginTop="@dimen/spacing_16"
        android:background="@drawable/bg_icono_circulo_claro"
        android:contentDescription="@string/action_volver"
        android:padding="@dimen/spacing_10"
        android:src="@android:drawable/ic_media_previous"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/primary_brand_dark" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_detalle_evento"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="@dimen/spacing_20"
        android:paddingTop="@dimen/spacing_12"
        android:paddingEnd="@dimen/spacing_20"
        android:paddingBottom="@dimen/spacing_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_volver_detalle_evento">

        <LinearLayout
            android:id="@+id/container_detalle_evento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_titulo_detalle_evento"
                style="@style/Text.PlayMatch.SectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detalle_evento_titulo" />

            <TextView
                android:id="@+id/txt_descripcion_detalle_evento"
                style="@style/Text.PlayMatch.Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_8"
                android:text="@string/detalle_evento_descripcion" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_16"
                android:background="@drawable/bg_card_blanca"
                android:orientation="vertical"
                android:padding="@dimen/spacing_16">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_fecha"
                    android:textColor="@color/text_tertiary"
                    android:textSize="@dimen/text_size_12" />

                <TextView
                    android:id="@+id/txt_fecha_detalle_evento"
                    style="@style/Text.PlayMatch.Body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detalle_evento_fecha"
                    android:textColor="@color/text_primary"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_10"
                    android:text="@string/label_hora"
                    android:textColor="@color/text_tertiary"
                    android:textSize="@dimen/text_size_12" />

                <TextView
                    android:id="@+id/txt_hora_detalle_evento"
                    style="@style/Text.PlayMatch.Body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detalle_evento_hora"
                    android:textColor="@color/text_primary"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_10"
                    android:text="@string/label_ubicacion"
                    android:textColor="@color/text_tertiary"
                    android:textSize="@dimen/text_size_12" />

                <TextView
                    android:id="@+id/txt_ubicacion_detalle_evento"
                    style="@style/Text.PlayMatch.Body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detalle_evento_ubicacion"
                    android:textColor="@color/text_primary"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_10"
                    android:text="@string/label_organizador"
                    android:textColor="@color/text_tertiary"
                    android:textSize="@dimen/text_size_12" />

                <TextView
                    android:id="@+id/txt_club_detalle_evento"
                    style="@style/Text.PlayMatch.Body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detalle_evento_organizador"
                    android:textColor="@color/text_primary"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_10"
                    android:text="@string/label_estado"
                    android:textColor="@color/text_tertiary"
                    android:textSize="@dimen/text_size_12" />

                <TextView
                    android:id="@+id/txt_estado_detalle_evento"
                    style="@style/Text.PlayMatch.Body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/evento_estado_publicado"
                    android:textColor="@color/text_primary"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
